deploy/openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: openshift-monitor
  namespace: your-sit-namespace
spec:
  to:
    kind: Service
    name: openshift-monitor
  port:
    targetPort: 8080
  tls:
    termination: edge
